@@ -44,7 +44,7 @@
   6019ce63b79e768e7c959504fcb5f4b08bf1fa7c 2012073100 mingw32-libiconv.xml
   ccc15973cdc9ff14c12e4385c3e692af1c18b29d 2012073100 mingw32-libtool.xml
   abf16c6e3575585f92c4a88b7be2c1bf6f7e5f26 2012021600 mingw32-lua.xml
-  d643c7f267083f540e270715973cbcd3cb26e0f0 2012073100 mingw32-make.xml
+  6a33decb16f8121d92110d4baefc03d058268f79 2012082600 mingw32-make.xml
   71b5ce19cd3f6da57625e75d0e3d7f1bfb4e698c 2012073100 mingw32-mgwport.xml
   8e49b4efd144afdfe5730de463045ee32a57d5e4 2012042600 mingw32-mingw-get.xml
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
