@@ -1,3 +1,10 @@
+2012-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
+
+	Update & publish mingw32-make.
+
+	* mingw32/mingw32-make.xml: Update to 3.82.90-cvs-20120823-1.
+	* mingw32/issue.log: Updated accordingly.
+
 2012-07-31  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Remove redundant package names from description/title attributes.
